# distributed-realtime-translator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  setup.sh  toolchain-aarch64.cmake
app/: CMakeLists.txt
app/include/: stt_manager.h  translator_manager.h  tts_manager.h  tui_manager.h
app/src/: main_hub.c  main_stt.c  main_trans.c  main_tts.c  stt_manager.cpp  translator_manager.cpp  tts_manager.cpp  tui_manager.c
hal/include/hal/: audio_hal.h  network.h
hal/src/: audio_hal.c  network.c
